# z-data

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  LICENSE  Makefile  README.md  Setup.hs  Z-Data.cabal  cabal.project  z-data.cabal  z.haddock.css  zbase.cabal
.github/workflows/: dockerCI.yml  osxCI.yml  publish.yml  ubuntuCI.yml  winCI.yml
Z/: CBytes.hs  Foreign.hs  JSON.hs  Ref.hs
Z/Data/: ASCII.hs  Array.hs  Builder.hs  CBytes.hs  JSON.hs  Parser.hs  PrimRef.hs  Text.hs  Textual.hs  Vector.hs
Z/Data/Array/: Base.hs  Buffer.hs  Cast.hs  Checked.hs  QQ.hs  Unaligned.hs  UnalignedAccess.hs  UnliftedArray.hs  UnliftedSmallArray.hs
Z/Data/Builder/: Base.hs  Numeric.hs  Time.hs  UUID.hs
Z/Data/Builder/Numeric/: DigitTable.hs
Z/Data/Flat/: FlatMap.hs  FlatPrimSet.hs  FlatSet.hs
Z/Data/Generics/: Utils.hs
Z/Data/JSON/: Base.hs  Builder.hs  Converter.hs  Value.hs
Z/Data/Parser/: Base.hs  Numeric.hs  Time.hs  UUID.hs
Z/Data/PrimRef/: PrimIORef.hs  PrimSTRef.hs
Z/Data/Text/: Base.hs  Builder.hs  Extra.hs  HexBytes.hs  Print.hs  Regex.hs  Search.hs  ShowT.hs  UTF8Codec.hs  UTF8Rewind.hsc
Z/Data/Utils/: Cast.hs  FFI.hs  Generics.hs  UTF8Codec.hs  UTF8Rewind.hsc  Unaligned.hs
Z/Data/Utils/MonoList/: IntList.hs
Z/Data/Utils/Orphan/: Prim.hs
Z/Data/Vector/: Base.hs  Base64.hs  Extra.hs  FlatIntMap.hs  FlatIntSet.hs  FlatMap.hs  FlatSet.hs  Hex.hs  QQ.hs  Search.hs  Shuffle.hs  Sort.hs
Z/Encoder/: Base64.hs
Z/Foreign/: CPtr.hs
Z/JSON/: Builder.hs  Converter.hs  Value.hs
Z/Matrix/: Base.hs
Z/Monad/: Decoder.hs  Encoder.hs  STE.hs
Z/Monad/Decoder/: Base.hs
Z/Monad/Encoder/: Base.hs  Numeric.hs  Time.hs  UUID.hs
Z/Monad/Encoder/Numeric/: DigitTable.hs
Z/MonoList/: IntList.hs
Z/Ref/: PrimRef.hs  UnliftedRef.hs
cbits/: bytes.c  compute_float_64.c  dtoa.c  helper.cc  regex.cc  text.c  z_base64_codec.c  z_bytes.c  z_dtoa.c  z_hex_codec.c  z_json_string.c  z_text.c  z_text_width.c
doc-assets/: z.haddock.css
docs/: index.md
include/: XList.hs  bytes.h
test/Z/: ForeignSpec.hs
test/Z/Data/: CBytesSpec.hs
test/Z/Data/Array/: UnalignedAccessSpec.hs  UnalignedSpec.hs
test/Z/Data/Builder/: NumericSpec.hs  TimeSpec.hs  UUIDSpec.hs
test/Z/Data/JSON/: BaseSpec.hs  ValueSpec.hs
test/Z/Data/Parser/: BaseSpec.hs  NumericSpec.hs  TimeSpec.hs  UUIDSpec.hs
test/Z/Data/PrimArray/: UnalignedAccessSpec.hs
test/Z/Data/Text/: BaseSpec.hs  BuilderSpec.hs  ExtraSpec.hs  HexBytesSpec.hs  PrintSpec.hs  SearchSpec.hs  ShowTSpec.hs
test/Z/Data/Vector/: Base64Spec.hs  BaseSpec.hs  ExtraSpec.hs  FlatMapSpec.hs  FlatSetSpec.hs  HexSpec.hs  SearchSpec.hs  ShuffleSpec.hs  SortSpec.hs
test/Z/Foreign/: CPtrSpec.hs
test/cbits/: ffi.c
z-data/: ChangeLog.md  Z-Data.cabal
z-data/Z/: Foreign.hs
z-data/Z/Data/: ASCII.hs  Builder.hs  Parser.hs  Text.hs  Vector.hs
z-data/Z/Data/Array/: Cast.hs  QQ.hs  UnliftedArray.hs
z-data/Z/Data/Builder/: Base.hs  Time.hs
z-data/Z/Data/Builder/Numeric/: DigitTable.hs
z-data/Z/Data/Generics/: Utils.hs
z-data/Z/Data/JSON/: Builder.hs  Converter.hs
z-data/Z/Data/Parser/: Base.hs  Numeric.hs  Time.hs
z-data/Z/Data/PrimRef/: PrimIORef.hs
z-data/Z/Data/Text/: Base.hs  Print.hs
z-data/Z/Data/Vector/: Base64.hs  FlatIntSet.hs  FlatSet.hs  Hex.hs  QQ.hs  Search.hs  Sort.hs
z-data/cbits/: bytes.c  text_width.c
z-data/include/: bytes.h  text.h
z-data/test/Z/: ForeignSpec.hs
z-data/test/Z/Data/Builder/: NumericSpec.hs  TimeSpec.hs
z-data/test/Z/Data/JSON/: BaseSpec.hs  ValueSpec.hs
z-data/test/Z/Data/Parser/: BaseSpec.hs  NumericSpec.hs  TimeSpec.hs
z-data/test/Z/Data/Text/: BaseSpec.hs  PrintSpec.hs  SearchSpec.hs
z-data/test/Z/Data/Vector/: Base64Spec.hs  BaseSpec.hs  ExtraSpec.hs  SortSpec.hs
z-regex/: Setup.hs  Z-Regex.cabal
z-regex/Z/Data/: Regex.hs
